# open-lego-camera-cpp

./: .gitignore  CMakeLists.txt  README.md
scripts/: get-models.sh
src/: app.cpp  app.hpp  battery.cpp  battery.hpp  camera.cpp  camera.hpp  config.cpp  config.hpp  dogfilter.cpp  dogfilter.hpp  facetracker.cpp  facetracker.hpp  filters.cpp  filters.hpp  icons.cpp  icons.hpp  mesh3d.cpp  mesh3d.hpp  types.hpp  ui.cpp
tools/: filter_mockup.cpp  rotate_test.cpp  welcome_mockup.cpp
